Update Card Component with 0 width and height to prevent Link from overflowing entire page, fix when there is a relative container to use

--- a/component-library/app/components/Card/Card.module.scss
+++ b/component-library/app/components/Card/Card.module.scss
@@ -14,6 +14,9 @@
     bottom: 0;
     left: 0;
     cursor: pointer;
+    //TODO: fix so that it is set relative to list 
+    width: 0; 
+    height: 0; 
 
     &:hover ~ .Content .Title { 
         color: $purple;    
@@ -22,8 +25,6 @@
 
 .ImageContainer {
     position: relative;
-
-    border: 3px solid red; 
 
     &::before {
         content: '';
